# HAUptic-Paddle

./: LICENSE  PhysicsDemo.py  README.md
Documentation/: HAUptic.pptx
Electrical/PCB/hauptic_pcb/: hauptic_pcb.kicad_pcb  hauptic_pcb.kicad_prl  hauptic_pcb.kicad_pro  hauptic_pcb.kicad_sch  hauptic_pcb.kicad_sch-bak  hauptic_pcb.net
Hardware/: 51075K27_Abrasion-Resistant Tygon Rubber Tube for Chemicals.SLDPRT  91264A242_Alloy Steel Shoulder Screw.SLDPRT  91290A115_Alloy Steel Socket Head Screw.SLDPRT  92150A101_Mil. Spec. Washer.SLDPRT  Drive_Wheel.STL  HAUPTIC_PADDLE.SLDASM  HAUPTIC_PADDLE.x_t
Hardware/Archive/: 53535A22_Rubber Foot.SLDPRT  57295K73_Alnico Disc Magnet.SLDPRT  Base_A.SLDPRT  Base_B.SLDPRT  Drive_Wheel.SLDPRT  Sector_Pulley_MRoffset.SLDPRT
Hardware/Archive/CAD_ARCHIVE/: Sector_Pulley.SLDPRT
Hardware/CAD/: 2938T3_High-Load Oil-Embedded Sleeve Bearing.SLDPRT  53535A22_Rubber Foot.SLDPRT  57295K73_Alnico Disc Magnet.SLDPRT  90480A011_Low-Strength Steel Hex Nut.SLDPRT  91772A055_Passivated 18-8 Stainless Steel Pan Head Phillips Screw.SLDPRT  91772A500_Passivated 18-8 Stainless Steel Pan Head Phillips Screw.SLDPRT  Assembly.SLDASM  Bottom_Plate.step  DOBLE PUENTE H.step.SLDPRT  LCD_Plate2.step  LCD_Plate2.step.SLDPRT  Motor.SLDPRT  Motor_Paddle_Interface.step.SLDPRT  Motor_Plate.STL  PCB.step  Right_Side_Plate.step  Swing Arm.STEP  TB6612FNG.step.SLDPRT  capacitor.step.SLDPRT  capacitor_v1.step.SLDPRT  hall_effect_sensor.SLDPRT  header_8.step.SLDPRT  tb6612fng.step.SLDASM
Hardware/CAD_ARCHIVE/: Base.1.SLDPRT
Hardware/CAD_files/: 91264A242_Alloy Steel Shoulder Screw.SLDPRT  9414T6_Set Screw Shaft Collar.SLDPRT  Base.SLDPRT  Base.STL  Base_A.SLDPRT  Base_A.STL  Base_B.SLDPRT  Base_B.STL  Drive_Wheel.SLDPRT  HapticPaddle.SLDASM  Sector_Pulley - adjusted2.SLDPRT  Sector_Pulley.SLDPRT  Sector_Pulley.STL  Sector_Pulley_MRoffset.SLDPRT  Sector_Pulley_MRoffset.STL  motor.SLDPRT  ~$9414T6_Set Screw Shaft Collar.SLDPRT  ~$Base.1.SLDPRT
Hardware/STEP Files/: Left Side Plate.step  Motor Plate (90 Deg).step  Motor Pulley.step  Support Plate.step  Swing Arm.step
Hardware/step/: 2938T3_High-Load Oil-Embedded Sleeve Bearing-1.STEP  51075K27_Abrasion-Resistant Tygon Rubber Tube for Chemicals-1.SLDPRT  53535A22_Rubber Foot-1.SLDPRT  53535A22_Rubber Foot-1.STEP  57295K73_Alnico Disc Magnet-1.SLDPRT  91264A242_Alloy Steel Shoulder Screw-1.SLDPRT  91290A115_Alloy Steel Socket Head Screw-1.SLDPRT  91290A115_Alloy Steel Socket Head Screw-1.STEP  9414T6_Set Screw Shaft Collar-1.STEP  Base_A-1.STEP  Base_B-1.SLDPRT  Drive_Wheel-1.SLDPRT  Part2.STEP  Part3.STEP  motor-1.SLDPRT  motor-1.STEP
Software/: CMakeLists.txt
Software/02_Data_Driven_Control/DDC01_RL/: CMakeLists.txt
Software/02_Data_Driven_Control/FRA_01/: CMakeLists.txt
Software/02_Data_Driven_Control/FRA_01/src/: FRA.cpp
Software/02_Data_Driven_Control/POS_01/: CMakeLists.txt
Software/02_Data_Driven_Control/POS_01/src/: POS.cpp
Software/devices/pico-ROB14450/: CMakeLists.txt
Software/devices/pico_LCD/: CMakeLists.txt
Software/devices/pico_allegroMR/: CMakeLists.txt
Software/devices/pico_allegroMR/linearize_AllegroMR/: CMakeLists.txt  linearizeMR.c
Software/devices/pico_allegroMR/src/: linearizeMR.c  linearizeMR.cpp
Software/devices/seeed_read_rp2040/: CMakeLists.txt
Software/devices/seeed_read_rp2040/src/: main.cpp
Software/include/: control_gains.h  pin_definitions.h
Software/lib/pico_allegroHalleffect/: pico_allegroHalleffect.cpp  pico_allegroHalleffect.h
Software/lib/pico_lcd/: pico_lcd.cpp
Software/lib/pico_rob14450/: pico_rob14450.cpp
Software/src/: PD.cpp  main.cpp  motorSpinTest.cpp
Software/tests/sensor_tuning/: CMakeLists.txt
Software/tests/sensor_tuning/src/: ui_pot.cpp
(+45 files in other folders)
